force-app/main/default/objects/OrgReportCount__c/OrgReportCount__c.object-meta.xml
<CustomObject>
    <description>Org Report Count information retrieved during polling for the org search functionality</description>
    <label>OrgReportCount</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgReportCounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>