force-app/main/default/objects/OrgReportCount__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>How many reports are in this folder</description>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>