force-app/main/default/objects/OrgReportCount__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the property folder</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>